# BRD_1

./: .env.example  .gitignore  BRD_AGENT_BUILD_LOG.md  BUILD_LOG.md  CLAUDE_1.md  main.py  pyproject.toml  response.json  sample.vtt  streamlit_app.py
app/api/: dependencies.py  routes.py
app/core/: config.py  logging.py  models.py
app/services/: ai_processor.py  brd_builder.py  brd_merger.py  extractor.py  foundry_client.py  prompts.py
app/utils/: chunker.py  docx_extractor.py  vtt_parser.py
scripts/: create_template.py
templates/: brd_template.docx
tests/: test_ai_processor.py  test_api.py  test_brd_builder.py  test_extractor.py
